# Prime-Teaching

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
apps/backend/: .env.example  README.md  _inspect_cols.py  add_subtopics.py  add_subtopics_final.py  add_subtopics_fixed.py  add_subtopics_fixed2.py  check_enums.py  create_all_tables.py  fix_enums.py  init_db.py  package.json  pyproject.toml  requirements.txt  seed_data.py  test_db.py  test_force_ipv4.py  test_ipv4.py  test_pg.py  test_pooler.py  test_postgres.py  test_setup.py  test_supabase.py  verify_db.py
apps/backend/alembic/: README.md
apps/backend/src/: __init__.py  main.py
apps/backend/src/api/: deps.py
apps/backend/src/api/v1/: router.py
apps/backend/src/core/: config.py  database.py  deps.py  security.py  test_db.py
apps/backend/src/models/: __init__.py  ai_job.py  assessment.py  base.py  calendar.py  enums.py  lesson_plan.py  progress.py  resource.py  resource_recommendation.py  school.py  session.py  subject.py  subtopic.py  teaching_note.py  unit.py  user.py
apps/backend/src/schemas/: __init__.py  assessments.py  auth.py  calendar.py  curriculum.py  generation.py  lesson_plans.py  progress.py  resources.py  teaching_notes.py
apps/backend/src/services/: ai_service.py  assessment_service.py  calendar_service.py  ids.py  lesson_service.py  progress_service.py
apps/backend/src/utils/: pdf_export.py
apps/backend/src/workers/: celery_app.py
apps/backend/src/workers/tasks/: assessment_tasks.py  calendar_tasks.py  lesson_tasks.py  (+1 more)
(+140 files in other folders)
