[project]
name = "prime-eduai-backend"
version = "0.1.0"
description = "FastAPI backend for PRIME EduAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "pgvector>=0.3.5",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.1.1",
  "sqlalchemy>=2.0.35",
  "supabase>=2.9.1",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.8",
  "mypy>=1.11.2"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = [".", "src"]
